{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 7,
  "lineage": "c440aae8-e0db-64ea-2265-54afc011de7d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "k8s-master",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "104.196.234.123",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-07-10T03:21:42.460-07:00",
            "id": "projects/evident-syntax-282809/regions/us-west1/addresses/ipv4-address-k8s-master",
            "name": "ipv4-address-k8s-master",
            "network_tier": "PREMIUM",
            "project": "evident-syntax-282809",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/evident-syntax-282809/regions/us-west1/addresses/ipv4-address-k8s-master"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "k8s-worker",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.105.24.82",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-07-10T03:21:42.562-07:00",
            "id": "projects/evident-syntax-282809/regions/us-west1/addresses/ipv4-address-k8s-worker",
            "name": "ipv4-address-k8s-worker",
            "network_tier": "PREMIUM",
            "project": "evident-syntax-282809",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/evident-syntax-282809/regions/us-west1/addresses/ipv4-address-k8s-worker"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8s-dashboard",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "10443",
                  "443",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-07-10T03:21:42.465-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/evident-syntax-282809/global/firewalls/k8s-dashboard",
            "name": "k8s-dashboard",
            "network": "https://www.googleapis.com/compute/v1/projects/evident-syntax-282809/global/networks/default",
            "priority": 1000,
            "project": "evident-syntax-282809",
            "self_link": "https://www.googleapis.com/compute/v1/projects/evident-syntax-282809/global/firewalls/k8s-dashboard",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "dashboard"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8s-default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-07-10T03:21:42.394-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/evident-syntax-282809/global/firewalls/k8s-firewall",
            "name": "k8s-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/evident-syntax-282809/global/networks/default",
            "priority": 1000,
            "project": "evident-syntax-282809",
            "self_link": "https://www.googleapis.com/compute/v1/projects/evident-syntax-282809/global/firewalls/k8s-firewall",
            "source_ranges": [
              "10.138.0.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "web"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "k8s-cluster-firewall",
              "k8s-master-ssh"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s-master",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20200701",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/evident-syntax-282809/zones/us-west1-a/disks/k8s-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/evident-syntax-282809/zones/us-west1-a/instances/k8s-master",
            "instance_id": "3417521302261858221",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDFjO2ginj/RuoNDy0j+BGrx8gR7e4LcGKXhNyGFoX9nW3cYe0FgPhK3Cz+otpRNLh1GhlkImirEXdANjI9hY7M0swWf1OZEWwxZxpEFq1jgw9j7DQyETk8gIivPc8bq9pFc8MX1RdZiejPyz9XSjbrsiX3Fa2ugrUZs+U+NseZkK+dNc7vxJ78S1Up4+RhYnPviL/G2rhBdxkrSiTla3FXPCMIHcTcXbAbmhUSL4h68C0ARv0Of5RfsvTJXyKY1tcWPKjWpyvWkKr530I7qFZlZw4p8sLCfGBaZrSexODZRlJ61D+oy/dbIae/4lCRd1utiw5TprLEXCgGOHwS+9Zd root@control-machine\n"
            },
            "metadata_fingerprint": "BLcSf3DzREY=",
            "name": "k8s-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.196.234.123",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/evident-syntax-282809/global/networks/default",
                "network_ip": "10.138.0.30",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/evident-syntax-282809/regions/us-west1/subnetworks/default",
                "subnetwork_project": "evident-syntax-282809"
              }
            ],
            "project": "evident-syntax-282809",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/evident-syntax-282809/zones/us-west1-a/instances/k8s-master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-master-ssh"
            ],
            "tags_fingerprint": "j4sm4PmiO2A=",
            "zone": "us-west1-a"
          },
          "dependencies": [
            "google_compute_address.k8s-master",
            "google_compute_address.k8s-worker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s-worker",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20200701",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/evident-syntax-282809/zones/us-west1-a/disks/k8s-worker"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/evident-syntax-282809/zones/us-west1-a/instances/k8s-worker",
            "instance_id": "2567652737305411501",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDFjO2ginj/RuoNDy0j+BGrx8gR7e4LcGKXhNyGFoX9nW3cYe0FgPhK3Cz+otpRNLh1GhlkImirEXdANjI9hY7M0swWf1OZEWwxZxpEFq1jgw9j7DQyETk8gIivPc8bq9pFc8MX1RdZiejPyz9XSjbrsiX3Fa2ugrUZs+U+NseZkK+dNc7vxJ78S1Up4+RhYnPviL/G2rhBdxkrSiTla3FXPCMIHcTcXbAbmhUSL4h68C0ARv0Of5RfsvTJXyKY1tcWPKjWpyvWkKr530I7qFZlZw4p8sLCfGBaZrSexODZRlJ61D+oy/dbIae/4lCRd1utiw5TprLEXCgGOHwS+9Zd root@control-machine\n"
            },
            "metadata_fingerprint": "BLcSf3DzREY=",
            "name": "k8s-worker",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.105.24.82",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/evident-syntax-282809/global/networks/default",
                "network_ip": "10.138.0.29",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/evident-syntax-282809/regions/us-west1/subnetworks/default",
                "subnetwork_project": "evident-syntax-282809"
              }
            ],
            "project": "evident-syntax-282809",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/evident-syntax-282809/zones/us-west1-a/instances/k8s-worker",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-cluster-firewall"
            ],
            "tags_fingerprint": "ddqylyipVmM=",
            "zone": "us-west1-a"
          },
          "dependencies": [
            "google_compute_address.k8s-worker"
          ]
        }
      ]
    }
  ]
}